--- a/angular/src/app/main/checklist/checklist.component.css
+++ b/angular/src/app/main/checklist/checklist.component.css
@@ -376,13 +376,51 @@ form.search-form input::after{
     margin-right: 10px;
 }
 .task-box {
-    padding: 2px 20px;
+    padding: 2px 20px 2px 5px;
     border-radius: 20px;
     width: 100%;
     position: relative;
     word-break: break-all;
     color: #575962;
+    display: flex;
+    align-items: center;
 }
+.task-box-dot-bg-purple {
+    width: 5px;
+    height: 5px;
+    background-color: #6F42C1;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.task-box-dot-bg-golden {
+    width: 5px;
+    height: 5px;
+    background-color: #ffb822;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.task-box-dot-bg-sea-green {
+    width: 5px;
+    height: 5px;
+    background-color: #0ABB87;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.task-box-dot-bg-magenta {
+    width: 5px;
+    height: 5px;
+    background-color: #993399;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 10px;
+}
+
 .task-report-form{
     width: 100px;
     height: 23px;
@@ -425,19 +463,7 @@ form.task-report-form select:focus option {
     color: #000;
 }
 
-.task-box::after {
-    content: "";
-    width: 5px;
-    height: 5px;
-    position: absolute;
-    background-color: #6F42C1;
-    left: 6px;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-    border-radius: 50%;
-}
+
 .task-box:hover{
     background-color: #F1F2FC;
 }
