--- a/angular/src/app/main/checklist/duplicate-task/duplicate-task.component.css
+++ b/angular/src/app/main/checklist/duplicate-task/duplicate-task.component.css
@@ -45,7 +45,10 @@
     position: absolute;
     font-size: 11px;
     color: #313030;
-    right: 15px;
+    right: 4px;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(65%);
+}
+label{
+    color: #606060;
 }
