--- a/angular/src/app/main/checklist/checklist.component.html
+++ b/angular/src/app/main/checklist/checklist.component.html
@@ -173,6 +173,8 @@
                                                 Assignee
                                                 <p-sortIcon field="AssigneeId"></p-sortIcon>
                                             </th>
+                                            <th class="cell-none">
+                                            </th>
                                         </tr>
                                     </ng-template>
                                 </p-table>
