--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -65,8 +65,32 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label>Assignee</label>
-                                        <app-user-list-component></app-user-list-component>
+                                        <!-- <label>Assignee</label>
+                                        <app-user-list-component></app-user-list-component> -->
+
+
+                                        <ng-select bindLabel="name" placeholder="Search users" appendTo="body"
+                                            [searchable]="true" [clearable]="true"
+                                            [(ngModel)]="input" (input)="onSearchUsers($event.target.value)">
+                                            <ng-option [value]="item.id" 
+                                                *ngFor="let item of users">
+                                                <img src="{{item.picture}}" width="20px" height="20px" />
+                                                {{item.name}}
+                                            </ng-option>
+                                        </ng-select>
+
+
+                                        <!-- <input type="text" (input)="onSearchUsers($event.target.value)"
+                                            [(ngModel)]="input" ng id="userIdFirstWay" list="dynmicUserIds" />
+                                        <datalist id="dynmicUserIds">
+                                            <option *ngFor="let item of users" [value]="item.id">
+                                                <div *ngIf="item.picture" class="kt-badge kt-badge--xl">
+                                                    <img class="header-profile-picture m--img-rounded m--marginless m--img-centered"
+                                                        alt="Pic" [src]="item.picture">
+                                                </div> {{item.name}}
+                                            </option>
+                                        </datalist> -->
+
                                     </div>
                                 </div>
                             </div>
@@ -145,9 +169,9 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                       <div class="col-12">
+                                        <div class="col-12">
                                             <span>{{SelectionMsg}}</span>
-                                       </div>
+                                        </div>
                                     </div>
 
                                 </div>
@@ -188,7 +212,7 @@
                                     </div>
                                 </div>
                             </div>
-                            
+
 
                             <div class="drag_drop_box">
                                 <label class="bg-color">Attachments</label>
