--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -119,7 +119,7 @@
 
                                     </select> -->
 
-                                    <app-user-list-component></app-user-list-component>
+                                    <app-user-list-component userId = {{taskDetailObject.assigneeId}} ></app-user-list-component>
 
                                 </div>
                                 <div class="col-md-4">
