--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -59,7 +59,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label>Assignee</label>
-                                        <app-user-list-component></app-user-list-component>
+                                        <app-user-list-component userId = {{getTaskForEdit.assigneeId}} ></app-user-list-component>
                                     </div>
                                 </div>
                             </div>
